# MiniJavaCompiler

./: CMakeLists.txt  ForCompiler.java  IAcceptable.h  IAddittionalExpressionParam.h  IAddittionalExpressionParamS.h  IClassDeclaration.h  IClassDeclarationS.h  IExpression.h  IMethodDeclaration.h  IStatement.h  IStatementS.h  IVisitor.h  Makefile  PVS-Studio.cmake  README.md  add_pvs_licence.py  astBuilder.cpp  irtBuilder.cpp  lex.yy.c  lexer.cpp  lexer.h  lexer.lex  makefile  parser.cpp  parser.h  parser.y  parserexe.cpp
AST/: ASTBuilder.cpp  ASTBuilder.h  ASTIncludes.h  ASTInterfaces.h  ASTPredefines.h  ASTVisualiser.cpp  ASTVisualiser.h
AST/core/: IAcceptable.h  IVisitor.h  TerminalIdentifier.hpp  TerminalIntliteral.hpp
AST/include/: ASTBuilder.cpp  ASTBuilder.h  ASTIncludes.h  ASTVisualiser.cpp  ASTVisualiser.h  AdditionalExpressionParam.hpp  AdditionalExpressionParamS.hpp  AdditionalParam.hpp  AdditionalParamS.hpp  AddittionalExpressionParam.hpp  AddittionalExpressionParamS.hpp  AndExpression.hpp  ArrayAssignmentStatement.hpp  BinaryOpExpression.hpp  BooleanType.hpp  ClassDeclaration.hpp  ClassDeclarationList.hpp  ClassDeclarationS.hpp  CurlyBraceStatement.hpp  CustomType.hpp  DotExpression.hpp  ExpressionParamList.hpp  ExpressionParamS.hpp  Extension.hpp  FalseExpression.hpp  Goal.hpp  IdentifierExpression.hpp  IfElseStatement.hpp  IntArrayType.hpp  IntType.hpp  IntliteralExpression.hpp  LengthExpression.hpp  LessExpression.hpp  MainClass.hpp  MethodDeclaration.hpp  MethodDeclarationList.hpp  MethodDeclarationS.hpp  MinusExpression.hpp  MultiplyExpression.hpp  NewArrayExpression.hpp  (+29 more)
AST/include/Nonused/: TerminalBoolean.hpp  TerminalClass.hpp  TerminalComma.hpp  TerminalDot.hpp  TerminalDotlength.hpp  TerminalElse.hpp  TerminalEquals.hpp  TerminalExtends.hpp  TerminalIf.hpp  TerminalInt.hpp  TerminalLcurl.hpp  TerminalLparen.hpp  TerminalLsquare.hpp  TerminalMain.hpp  TerminalNew.hpp  TerminalNot.hpp  TerminalPrintln.hpp  TerminalPublic.hpp  TerminalRcurl.hpp  TerminalReturn.hpp  TerminalRparen.hpp  TerminalRsquare.hpp  TerminalSemicolon.hpp  TerminalStatic.hpp  TerminalString.hpp  TerminalVoid.hpp  TerminalWhile.hpp
AST/interfaces/: ASTInterfaces.h  IAcceptable.h  IAdditionalExpressionParam.h  IAdditionalExpressionParamS.h  IAdditionalParam.h  IAdditionalParamS.h  IAddittionalExpressionParam.h  IClassDeclaration.h  IClassDeclarationS.h  IExpression.h  IExpressionParamS.h  IExtension.h  IGoal.h  IMainClass.h  IMethodDeclaration.h  IMethodDeclarationS.h  IParam.h  IParams.h  IStatement.h  IStatementS.h  IType.h  IVarDeclaration.h  IVarDeclarationS.h  IVisitor.h
AST/interfaces/AdditionalParam/: IAdditionalParam.h
AST/interfaces/Extension/: IExtension.h
AST/interfaces/Goal/: Goal.h
AST/interfaces/MainClass/: IMainClass.h
AST/interfaces/MethodDeclarationS/: IMethodDeclarationS.h
AST/interfaces/VarDeclaration/: IVarDeclaration.h
IRTree/: IRTBuilder.cpp  IRTBuilder.h  IRTIncludes.h  IRTPredefines.h  IRTVisualiser.cpp  IRTVisualiser.h
IRTree/core/: Acceptable.h  CodeFragment.hpp  Visitor.h
IRTree/include/: BinOpExp.hpp  CJumpStm.hpp  CallExp.hpp  ConditionalWrapper.hpp  ConstExp.hpp  EseqExp.hpp  Exp.h  ExpConverter.hpp  ExpList.hpp  ExpStm.hpp  FromAndConverter.hpp  JumpStm.hpp  Label.h  LabelStm.hpp  MemExp.hpp  MoveStm.hpp  NameExp.hpp  RelativeCmpWrapper.hpp  SeqStm.hpp  Stm.h  StmConverter.hpp  StmList.hpp  SubtreeWrapper.hpp  Temp.h  TempExp.hpp
StackFrame/: FrameBuilder.cpp  FrameBuilder.hpp  FramesHolder.hpp  main.cpp
StackFrame/include/: Access.h  Frame.hpp  FrameInterface.h  InFrameAccess.h  InRegAccess.h  VarInfo.hpp  X86MiniJavaFrame.h
StackFrame/src/: Frame.cpp  InFrameAccess.cpp  InRegAccess.cpp  VarInfo.cpp  X86MiniJavaFrame.cpp
SymbolTable/: CSymbolTableVisualizer.cpp  CSymbolTableVisualizer.h  ClassInfo.hpp  Info.h  MethodInfo.hpp  Symbol.hpp  SymbolTableBuilder.cpp  SymbolTableBuilder.h  Table.h  TypeChecker.cpp  TypeChecker.h  VariableInfo.h  main.cpp
SymbolTable/include/: BlockScope.h  ClassInfo.h  Info.h  MethodInfo.h  MethodInfo.hpp  NameScope.h  Symbol.h  SymbolTable.h  Table.h  VariableInfo.h  VariableInfo.hpp
SymbolTable/src/: BlockScope.cpp  ClassInfo.cpp  MethodInfo.cpp  Symbol.cpp  SymbolTable.cpp  Table.cpp  VariableInfo.cpp
common/include/: Switcher.h
common/src/: Switcher.cpp
lexer/: lex.yy.c  lexer.cpp  lexer.h  lexer.lex
parser/: parser.cpp  parser.h  parser.output  parser.tab.c  parser.tab.h  parser.y
tests/: LexerTests.cpp  ParserTestYYLEX.cpp  ParserTestYYLEX.hpp  ParserTests.cpp  TokenMap.hpp  main.cpp
tests/LexerTestsFiles/correct/: BinarySearch  BinaryTree  BubbleSort  Factorial  LinearSearch  LinkedList  QuickSort  TreeVisitor  sample1
tests/LexerTestsFiles/results/: BinarySearch  BinaryTree  BubbleSort  Factorial  LinearSearch  LinkedList  QuickSort  TreeVisitor  sample1
tests/ParserTestsFiles/correct/: Factorial  LinearSearch  LinkedList  QuickSort  sample1
tests/ParserTestsFiles/results/: BinarySearch  BinaryTree  BubbleSort  TreeVisitor  sample1
tests/inputs/: BinaryTree.java  ForCompiler.java  SymbolTableTests.java  sample1.java
